--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                     <th>Gebet</th>
                     <th>Uhrzeit</th>
                 </tr>
+               <tr><td><strong>Fastenbeginn (Imsak)</strong></td><td id="Fastenbeginn (Imsak)" class="fajr-bold"><strong>00:00</strong></td></tr> 
                 <tr><td><strong>Fajr</strong></td><td id="fajr" class="fajr-bold"><strong>00:00</strong></td></tr>
                 <tr><td>Shuruk (Sonnenaufgang)</td><td id= "shuruk">00:00</td></tr>
                 <tr><td><strong>Dhuhr</strong></td><td id="dhuhr" class="duhr-bold">00:00</td></tr>
