--- a/beiträge.html
+++ b/beiträge.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <header>
-        <h1>Beiträge</h1>
+                <h1>Usul ad-Deen</h1>
+        <h2>Beiträge</h2>
         <nav>
             <ul>
                 <li><a href="index.html">Start</a></li>
