--- a/login.html
+++ b/login.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <header>
-        <h1>Login</h1>
+        <h1>Usul ad-Deen</h1>
+        <h2>Login</h2>
     </header>
 
     <main>
