--- a/register.html
+++ b/register.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <header>
-        <h1>Registrieren</h1>
+        <h1>Usul ad-Deen</h1>
+        <h2>Registrieren</h2>
     </header>
 
     <main>
