--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
                 <li><a href="dua.html">Bittgebete</a></li>
                 <li><a href="beiträge.html">Beiträge</a></li>
                 <li><a href="bücher.html">Bücher</a></li>
-                <li><a href="mehr.html">Mehr</a></li>
+                <li><a href="login.html">Login</a></li>
+                
             </ul>
         </nav>
     </header>
