--- a/login.html
+++ b/login.html
@@ -24,6 +24,7 @@
             <button type="submit">Login</button>
         </form>
         <p>Noch kein Konto? <a href="register.html">Hier registrieren</a></p>
+        <a href="Index.html">Oder zurück zur Startseite</a>
     </main>
 </body>
 </html>
