--- a/login.html
+++ b/login.html
@@ -11,6 +11,16 @@
     <header>
         <h1>Usul ad-Deen</h1>
         <h2>Login</h2>
+        <nav>
+            <ul>
+                <li><a href="index.html">Start</a></li>
+                <li><a href="hadith.html">Hadithsammlungen</a></li>
+                <li><a href="dua.html">Bittgebete</a></li>
+                <li><a href="beiträge.html">Beiträge</a></li>
+                <li><a href="bücher.html">Bücher</a></li>
+                 <li><a href="login.html">Login</a></li>
+            </ul>
+        </nav>
     </header>
 
     <main>
