--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <h1>Usul ad-Deen</h1>
         <h2>Startseite</h2>
-        <img src="icons/icon-192x192.png" alt="Logo" class="logo">
+        <img src="icons/hintergrund.png" alt="Logo" class="logo">
         <nav>
             <ul>
                 <li><a href="index.html">Start</a></li>
