--- a/index.html
+++ b/index.html
@@ -56,12 +56,20 @@
                 </table>
             </div>
 
-            <div id="feiertage">
-                <h2>Islamische Feiertage</h2>
+           <div id="feiertage">
+                <h2>Islamische Feiertage & Countdown</h2>
                 <table id="feiertage-tabelle">
                     <tr><th>Feiertag</th><th>Datum</th><th>Countdown</th></tr>
+                    <tr><td>Ramadan</td><td>01.03.2025</td><td id="ramadan-countdown">Lädt...</td></tr>
+                    <tr><td>Eid al-Fitr</td><td>30.03.2025</td><td id="fitr-countdown">Lädt...</td></tr>
+                    <tr><td>Hajj</td><td>04.06.2025</td><td id="hajj-countdown">Lädt...</td></tr>
+                    <tr><td>Arafah</td><td>05.06.2025</td><td id="arafah-countdown">Lädt...</td></tr>
+                    <tr><td>Eid al-Adha</td><td>06.06.2025</td><td id="adha-countdown">Lädt...</td></tr>
+                    <tr><td>Islamisches Neujahr</td><td>26.06.2025</td><td id="neujahr-countdown">Lädt...</td></tr>
+                    <tr><td>Ashura</td><td>05.07.2025</td><td id="ashura-countdown">Lädt...</td></tr>
+                    <tr><td>Isra' und Mi'raj</td><td>16.01.2026</td><td id="isra-countdown">Lädt...</td></tr>
                 </table>
-            </div>
+               
         </section>
 
         <section id="hadith-dua-box">
