--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 </table>
             </div>
 
-           <div id="feiertage">
+            <div id="feiertage">
                 <h2>Islamische Feiertage & Countdown</h2>
                 <table id="feiertage-tabelle">
                     <tr><th>Feiertag</th><th>Datum</th><th>Countdown</th></tr>
@@ -69,7 +69,7 @@
                     <tr><td>Ashura</td><td>05.07.2025</td><td id="ashura-countdown">Lädt...</td></tr>
                     <tr><td>Isra' und Mi'raj</td><td>16.01.2026</td><td id="isra-countdown">Lädt...</td></tr>
                 </table>
-               
+            </div>
         </section>
 
         <section id="hadith-dua-box">
@@ -78,6 +78,7 @@
                 <p id="hadith-arabisch">Lädt...</p>
                 <p id="hadith-deutsch">Lädt...</p>
                 <p><strong>Quelle:</strong> <span id="hadith-quelle">Lädt...</span></p>
+                <p><strong>Authentizität:</strong> <span id="hadith-auth">Lädt...</span></p>
             </div>
 
             <div id="dua-box">
@@ -86,6 +87,7 @@
                 <p id="dua-transliteration">Lädt...</p>
                 <p id="dua-deutsch">Lädt...</p>
                 <p><strong>Quelle:</strong> <span id="dua-quelle">Lädt...</span></p>
+                 <p><strong>Authentizität:</strong> <span id="dua-auth">Lädt...</span></p>
             </div>
         </section>
     </main>
