--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <div id="dua-box">
                 <h2>Bittgebet des Tages</h2>
                 <p id="dua-arabisch">Lädt...</p>
-                <p id="dua-transliteration">Lädt...</p>
+                <p id="dua-trans">Lädt...</p>
                 <p id="dua-deutsch">Lädt...</p>
                 <p><strong>Quelle:</strong> <span id="dua-quelle">Lädt...</span></p>
                  <p><strong>Authentizität:</strong> <span id="dua-auth">Lädt...</span></p>
