--- a/dua.html
+++ b/dua.html
@@ -36,6 +36,7 @@
         <p id="dua-transliteration"></p>
         <p id="dua-deutsch"></p>
         <p><strong>Quelle:</strong> <span id="dua-quelle"></span></p>
+        <p><strong>Authentizität:</strong> <span id="dua-authentizität"></span></p>
         <button onclick="schließeDua()">Zurück zur Übersicht</button>
     </section>
 
