--- a/dua.html
+++ b/dua.html
@@ -33,10 +33,10 @@
     <section id="dua-detail" style="display: none;">
         <h2 id="dua-titel"></h2>
         <p id="dua-arabisch"></p>
-        <p id="dua-transliteration"></p>
+        <p id="dua-trans"></p>
         <p id="dua-deutsch"></p>
         <p><strong>Quelle:</strong> <span id="dua-quelle"></span></p>
-        <p><strong>Authentizität:</strong> <span id="dua-authentizität"></span></p>
+        <p><strong>Authentizität:</strong> <span id="dua-auth"></span></p>
         <button onclick="schließeDua()">Zurück zur Übersicht</button>
     </section>
 
