--- a/dua.html
+++ b/dua.html
@@ -35,8 +35,7 @@
         <p id="dua-arabisch"></p>
         <p id="dua-trans"></p>
         <p id="dua-deutsch"></p>
-        <p><strong>Quelle:</strong> <span id="dua-quelle"></span></p>
-        <p><strong>Authentizität:</strong> <span id="dua-auth"></span></p>
+        <p><strong>Quelle und Authentizität:</strong> <span id="dua-quelle"></span></p>
         <button onclick="schließeDua()">Zurück zur Übersicht</button>
     </section>
 
