--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                 <select id="stadt-auswahl"></select>
                 <table>
                     <tr><th>Gebet</th><th>Uhrzeit</th></tr>
+                    <tr><td><strong>Imsak</strong></td><td id="Imsak" class="fajr-bold">00:00</td></tr>
                     <tr><td><strong>Fajr</strong></td><td id="fajr" class="fajr-bold">00:00</td></tr>
                     <tr><td>Shuruk</td><td id="shuruk">00:00</td></tr>
                     <tr><td><strong>Dhuhr</strong></td><td id="dhuhr">00:00</td></tr>
@@ -86,8 +87,7 @@
                 <p id="dua-arabisch">Lädt...</p>
                 <p id="dua-trans">Lädt...</p>
                 <p id="dua-deutsch">Lädt...</p>
-                <p><strong>Quelle:</strong> <span id="dua-quelle">Lädt...</span></p>
-                 <p><strong>Authentizität:</strong> <span id="dua-auth">Lädt...</span></p>
+                <p><strong>Quelle und Authentizität:</strong> <span id="dua-quelle">Lädt...</span></p>
             </div>
         </section>
     </main>
