--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
                 <select id="stadt-auswahl"></select>
                 <table>
                     <tr><th>Gebet</th><th>Uhrzeit</th></tr>
-                    <tr><td><strong>Imsak</strong></td><td id="Imsak" class="fajr-bold">00:00</td></tr>
+                    <tr><td><strong>Imsak (Fastenbeginn)</strong></td><td id="Imsak" class="fajr-bold">00:00</td></tr>
                     <tr><td><strong>Fajr</strong></td><td id="fajr" class="fajr-bold">00:00</td></tr>
-                    <tr><td>Shuruk</td><td id="shuruk">00:00</td></tr>
-                    <tr><td><strong>Dhuhr</strong></td><td id="dhuhr">00:00</td></tr>
-                    <tr><td><strong>Asr</strong></td><td id="asr">00:00</td></tr>
-                    <tr><td><strong>Maghrib</strong></td><td id="maghrib">00:00</td></tr>
-                    <tr><td><strong>Isha</strong></td><td id="isha">00:00</td></tr>
-                    <tr><td>Islamische Mitternacht</td><td id="mitternacht">00:00</td></tr>
+                    <tr><td>Shuruk (Sonnenaufgang) </td><td id="shuruk">00:00</td></tr>
+                    <tr><td><strong>Dhuhr</strong></td><td id="dhuhr" class="duhr-bold">00:00</td></tr>
+                    <tr><td><strong>Asr</strong></td><td id="asr" class="asr-bold">00:00</td></tr>
+                    <tr><td><strong>Maghrib (Ende Fastenzeit)</strong></td><td id="maghrib" class="fajr-bold">00:00</td></tr>
+                    <tr><td><strong>Isha</strong></td><td id="isha" class="fajr-bold">00:00</td></tr>
+                    <tr><td>Islamische Mitternacht (Ende Isha)</td><td id="mitternacht">00:00</td></tr>
                     <tr><td>Letztes Drittel</td><td id="letztes-drittel">00:00</td></tr>
                 </table>
             </div>
