--- a/index.html
+++ b/index.html
@@ -59,8 +59,9 @@
 
             <div id="feiertage">
                 <h2>Islamische Feiertage & Countdown</h2>
+                <p> Bitte beachtet, dass die islamischen Tage bereits am Vorabend des Tages beginnen und sich aufgrund der Mondsichtungen verschieben können. Und Allah swt weiß es am Besten.</p>
                 <table id="feiertage-tabelle">
-                    <tr><th>Feiertag</th><th>Datum</th><th>Countdown</th></tr>
+                    <tr><th>islamischer Tag</th><th>Datum</th><th>Verbleibende Tage</th></tr>
                     <tr><td>Ramadan</td><td>01.03.2025</td><td id="ramadan-countdown">Lädt...</td></tr>
                     <tr><td>Eid al-Fitr</td><td>30.03.2025</td><td id="fitr-countdown">Lädt...</td></tr>
                     <tr><td>Hajj</td><td>04.06.2025</td><td id="hajj-countdown">Lädt...</td></tr>
