--- a/dua.html
+++ b/dua.html
@@ -33,7 +33,7 @@
     <section id="dua-detail" style="display: none;">
         <h2 id="dua-titel"></h2>
         <p id="dua-arabisch"></p>
-        <p id="dua-trans"></p>
+        <p id="dua-transliteration"></p>
         <p id="dua-deutsch"></p>
         <p><strong>Quelle und Authentizität:</strong> <span id="dua-quelle"></span></p>
         <button onclick="schließeDua()">Zurück zur Übersicht</button>
