--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <p> Bitte beachtet, dass die islamischen Tage bereits am Vorabend des Tages beginnen und sich aufgrund der Mondsichtungen verschieben können. Und Allah swt weiß es am Besten.</p>
                 <table id="feiertage-tabelle">
                     <tr><th>islamischer Tag</th><th>Datum</th><th>Verbleibende Tage</th></tr>
-                    <tr><td>Ramadan</td><td>01.03.2025</td><td id="ramadan-countdown" class="countdown-bold">Lädt...</td></tr>
+                    <tr><td>Ramadan</td><td>01.03.2025</td><td id="ramadan-countdown" class="countdown-bold">00 Tage 00 Stunden</td></tr>
                     <tr><td>Eid al-Fitr</td><td>30.03.2025</td><td id="fitr-countdown" class="countdown-bold">Lädt...</td></tr>
                     <tr><td>Hajj</td><td>04.06.2025</td><td id="hajj-countdown" class="countdown-bold">Lädt...</td></tr>
                     <tr><td>Arafah</td><td>05.06.2025</td><td id="arafah-countdown" class="countdown-bold">Lädt...</td></tr>
