--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <script defer src="script.js"></script>
 </head>
 <body>
-    <header class="header-zeit-container">
+    <div class="header-bg"></div>
+    <header>
         <h1>Usul ad-Deen</h1>
         <nav>
             <ul>
@@ -29,14 +30,14 @@
                 </li>
             </ul>
         </nav>
-    </header>
-
-    <main>
         <section id="zeit-section">
             <h3>Aktuelle Zeit & Datum</h3>
             <p><span id="datum">Lädt...</span> | <span id="uhrzeit">Berlin: 00:00</span></p>
             <p><span id="islamisches-datum">Lädt...</span> | <span id="mekka-uhrzeit">Mekka: 00:00</span></p>
         </section>
+    </header>
+
+    <main>
 
         <section id="gebetszeiten-und-feiertage">
             <div id="gebetszeiten">
