--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <header class="header">
     <div class="header-top">
-        <img src="logo.png" alt="App Logo" class="logo">
+        <img src="icons/hintergrund.png" alt="App Logo" class="logo">
         <h1>Usul ad-Deen</h1>
         <h2>Startseite</h2>
     </div>
