--- a/index.html
+++ b/index.html
@@ -57,11 +57,9 @@
                     <tr><td><strong>Asr</strong></td><td id="asr">00:00</td><td id="asr-countdown">00:00:00</td></tr>
                     <tr><td><strong>Maghrib</strong></td><td id="maghrib">00:00</td><td id="maghrib-countdown">00:00:00</td></tr>
                     <tr><td><strong>Isha</strong></td><td id="isha">00:00</td><td id="isha-countdown">00:00:00</td></tr>
-                    <tr><td>Islamische Mitternacht</td><td id="mitternacht">00:00</td><td id="mitternacht-countdown">00:00:00</td></tr>
-                    <tr><td>Letztes Drittel der Nacht</td><td id="letztes-drittel">00:00</td><td id="letztesDrittel-countdown">00:00:00</td></tr>
                     <tr><td>Sunnah-Gebet: Duha</td><td id="duha">Lädt...</td><td id="duha-countdown">00:00:00</td></tr>
                     <tr><td>Sunnah-Gebet: Nachtgebet</td><td id="nachtgebet">Lädt...</td><td id="nachtgebet-countdown">00:00:00</td></tr>
-                    <tr><td>Letztes Drittel der Nacht</td><td id="letztes-drittel">00:00</td><td id="letztesDrittel-countdown">00:00:00</td></tr>
+                    <tr><td>Nachtgebet - Letztes Drittel</td><td id="nachtgebet-letztes-drittel">Lädt...</td><td id="nachtgebet-letztes-drittel-countdown">00:00:00</td></tr>
                 </table>
             </div>
 
@@ -69,7 +67,7 @@
             <div class="box">
                 <h2>Islamische Feiertage & Countdown</h2>
                 <table>
-                     <tr><th>Islamischer Tag</th><th>Datum</th><th>Verbleibende Zeit</th></tr>
+                    <tr><th>Islamischer Tag</th><th>Datum</th><th>Verbleibende Zeit</th></tr>
                     <tr><td>Ramadan</td><td>01.03.2025</td><td id="ramadan-countdown">Lädt...</td></tr>
                     <tr><td>Eid al-Fitr</td><td>30.03.2025</td><td id="fitr-countdown">Lädt...</td></tr>
                     <tr><td>Hajj</td><td>04.06.2025</td><td id="hajj-countdown">Lädt...</td></tr>
