--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <tr><td><strong>Isha</strong></td><td id="isha">00:00</td><td id="isha-countdown">00:00:00</td></tr>
                     <tr><td>Sunnah-Gebet: Duha</td><td id="duha">Lädt...</td><td id="duha-countdown">00:00:00</td></tr>
                     <tr><td>Sunnah-Gebet: Nachtgebet</td><td id="nachtgebet">Lädt...</td><td id="nachtgebet-countdown">00:00:00</td></tr>
-                    <tr><td>Nachtgebet - Letztes Drittel</td><td id="nachtgebet-letztes-drittel">Lädt...</td><td id="nachtgebet-letztes-drittel-countdown">00:00:00</td></tr>
+                    <tr><td>Sunnah-Gebet: Nachtgebet - Letztes Drittel</td><td id="nachtgebet-letztes-drittel">Lädt...</td><td id="nachtgebet-letztes-drittel-countdown">00:00:00</td></tr>
                 </table>
             </div>
 
