--- a/index.html
+++ b/index.html
@@ -54,7 +54,13 @@
                     <tr><td><strong>Fajr</strong></td><td id="fajr">00:00</td><td id="fajr-countdown">00:00:00</td></tr>
                     <tr><td>Shuruk</td><td id="shuruk">00:00</td><td id="shuruk-countdown">00:00:00</td></tr>
                     <tr><td><strong>Dhuhr</strong></td><td id="dhuhr">00:00</td><td id="dhuhr-countdown">00:00:00</td></tr>
-                    <tr><td><strong>Asr</strong></td><td id="asr">00:00</td><td id="asr-countdown">00:00:00</td></tr>
+                     <tr>
+                        <td><strong>Asr</strong> <br> 
+                            <small><a href="beiträge/asr-zeit.html">🔗 Regelungen zum Ende des Asr-Gebets</a></small>
+                        </td>
+                        <td id="asr">00:00</td>
+                        <td id="asr-countdown">00:00:00</td>
+                    </tr>
                     <tr><td><strong>Maghrib</strong></td><td id="maghrib">00:00</td><td id="maghrib-countdown">00:00:00</td></tr>
                     <tr><td><strong>Isha</strong></td><td id="isha">00:00</td><td id="isha-countdown">00:00:00</td></tr>
                     <tr><td>Sunnah-Gebet: Duha</td><td id="duha">Lädt...</td><td id="duha-countdown">00:00:00</td></tr>
